<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Copyrights">
    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        android:background="#F0F0F0"
        android:layout_marginBottom="65dp"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#303030"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textSize="25dp"
                android:text="Copyrights"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#404040"
                android:layout_gravity="left"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:text="Media resources used in this application"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/copyright"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#606060"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/copyright_madeby"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#00BCD4"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/copyright_link"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/warning"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#606060"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/warning_madeby"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#00BCD4"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/warning_link"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/logo"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#606060"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/logo_madeby"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#00BCD4"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/logo_link"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:gravity="left">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/announce"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#606060"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/logo_madeby"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#00BCD4"
                        android:layout_gravity="left"
                        android:textSize="17dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/logo_link"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:id="@+id/cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shape7"
        android:layout_gravity="left"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="19dp"
            android:text="Close"/>
    </LinearLayout>
</RelativeLayout>